--- a/vistas/login.html
+++ b/vistas/login.html
@@ -23,6 +23,8 @@
             <input type="password" name="" id="clave">
             <br>
             <button onclick="Loguear()">Inciar sesion</button>
+            <br>
+            <a href="../vistas/Registro.html">registro</a>
         </center>
     </body>
 </html>
