--- a/vistas/Registro.html
+++ b/vistas/Registro.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>POKIMON</title>
-        <script src="../js/index.js"></script>
+        <script src="../js/registro.js"></script>
     </head>
     <body>
 <body>
@@ -21,14 +21,14 @@
             <h1>Formulario de registro</h1>
             
             <label for="">correo</label>
-            <input type="text" name="" id="correo">
-            <br>
+            <input type="text" name="correo" id="correo">
+                <br>
             <label for="">contraseña</label>
-            <input type="password" name="" id="contra">
-            <br>
+            <input type="password" name="contra" id="contra">
+                <br>
             <label for="">confirma contraseña</label>
-            <input type="password" name="" id="confi-contra">
-            <br>
+            <input type="password" name="confiContra" id="confiContra">
+                <br>
             <button onclick="register()">registrate</button>
             <br>
 
