--- a/vistas/Registro.html
+++ b/vistas/Registro.html
@@ -17,7 +17,7 @@
         <br>
         <br>
         <center>
-
+ 
             <h1>Formulario de registro</h1>
             
             <label for="">correo</label>
@@ -28,6 +28,18 @@
                 <br>
             <label for="">confirma contraseña</label>
             <input type="password" name="confiContra" id="confiContra">
+                <br>
+            <label for="">confirma contraseña</label>
+            <input type="password" name="confiContra" id="confiContra">
+                <br>
+            <label for="">Ingresa tu Usuario</label>
+            <input type="text" name="usuario" id="usuario">
+                <br>
+            <label for="">Ingresa tu edad</label>
+            <input type="int" name="edad" id="edad">
+                <br>
+            <label for="">Ingresa tu genero</label>
+            <input type="text" name="genero" id="genero">
                 <br>
             <button onclick="register()">registrate</button>
             <br>
