v10 actualizacion-registro-login bien, falta inicio

--- a/vistas/inicio.html
+++ b/vistas/inicio.html
@@ -16,4 +16,18 @@
         <br>
         <br>
         <center>
-            
+            <label for="">Ingresa tu Usuario</label>
+            <input type="text" name="usuario" id="usuario">
+                <br>
+            <label for="">Ingresa tu edad</label>
+            <input type="int" name="edad" id="edad">
+                <br>
+            <label for="">Ingresa tu genero</label>
+            <input type="text" name="genero" id="genero">
+                <br>
+
+        </center>
+
+    </body>
+</html>
+    
