--- a/vistas/Registro.html
+++ b/vistas/Registro.html
@@ -24,27 +24,13 @@
             <input type="text" name="correo" id="correo">
                 <br>
             <label for="">contraseña</label>
-            <input type="password" name="contra" id="contra">
+            <input type="password" name="contraseña" id="contraseña">
                 <br>
             <label for="">confirma contraseña</label>
             <input type="password" name="confiContra" id="confiContra">
-                <br>
-            <label for="">confirma contraseña</label>
-            <input type="password" name="confiContra" id="confiContra">
-                <br>
-            <label for="">Ingresa tu Usuario</label>
-            <input type="text" name="usuario" id="usuario">
-                <br>
-            <label for="">Ingresa tu edad</label>
-            <input type="int" name="edad" id="edad">
-                <br>
-            <label for="">Ingresa tu genero</label>
-            <input type="text" name="genero" id="genero">
                 <br>
             <button onclick="register()">registrate</button>
             <br>
-
-    
     </center>
 </body>
 </html>
