--- a/vistas/inicio.html
+++ b/vistas/inicio.html
@@ -1,33 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>POKIMON</title>
-        <script src="../js/index.js"></script>
-    </head>
-    <body>
-        <center>
-            <h1>BIENVENIDO AL MUNDO POKIMON</h1>
-            <p id="texto">Bienvenido a mi primer juego en javascript</p>
-        </center>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mundo POKIMON</title>
+    <script src="./js/inicio.js"></script>
+</head>
+<body>
+    <center>
+        <h1>BIENVENIDO AL MUNDO POKIMON</h1>
+        <p>Bienvenido a mi primer juego en javascript</p>
         <hr>
         <br>
-        <br>
-        <br>
-        <center>
-            <label for="">Ingresa tu Usuario</label>
-            <input type="text" name="usuario" id="usuario">
-                <br>
-            <label for="">Ingresa tu edad</label>
-            <input type="int" name="edad" id="edad">
-                <br>
-            <label for="">Ingresa tu genero</label>
-            <input type="text" name="genero" id="genero">
-                <br>
-
-        </center>
-
-    </body>
-</html>
-    
+        <div class="" id="hola_mensaje">
+        </div>
+    </center>
+    <script src="./js/inicio.js"></script>
+</body>
+</html>     
