--- a/vistas/inicio.html
+++ b/vistas/inicio.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundo POKIMON</title>
-    <script src="./js/inicio.js"></script>
+    <script src="../js/inicio.js"></script>
 </head>
 <body>
     <center>
         <h1>BIENVENIDO AL MUNDO POKIMON</h1>
         <p>Bienvenido a mi primer juego en javascript</p>
         <hr>
-        <br>
-        <div class="" id="hola_mensaje">
+        
+        <div id="result" class="result" style="display: none;">
+            <h2>BIENVENIDO</h2>
+            <p id="userName"></p>
+            <p id="userEmail"></p>
+            <div id="welcomemessage"></div>
         </div>
+        
+        <button onclick="DatosHistoria()">Ver mi historia</button>
     </center>
-    <script src="./js/inicio.js"></script>
 </body>
-</html>     
+</html>
