--- a/vistas/Registro.html
+++ b/vistas/Registro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro POKIMON</title>
     <script src="../js/registro.js"></script>
+    <link rel="stylesheet" href="../css/fondo.css">
     <hr>
 </head>
 <body>
