--- a/vistas/inicio.html
+++ b/vistas/inicio.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundo POKIMON</title>
-    <script src="../js/inicio.js"></script>
+    <link rel="stylesheet" href="../css/fondo.css">
     <link rel="stylesheet" href="../css/inicio.css">
+    <script src="../js/inicio.js"></script>
 </head>
 <body>
-    <center>
-        <h1>BIENVENIDO AL MUNDO POKIMON</h1>
-        <p>Bienvenido a mi primer juego en javascript</p>
-        <hr>
-        </center>
+    <div class="container">
+        <header>
+            <h1>BIENVENIDO AL MUNDO POKIMON</h1>
+            <p>Bienvenido a mi primer juego en javascript</p>
+        </header>
+    </div>
+        <main>
+            <div class="info-box">
+                <div id="result" class="result">
+                    <h2>BIENVENIDO</h2>
+                    <p id="userName"></p>
+                    <p id="userEmail"></p>
+                    <div id="welcomemessage"></div>
+                </div>
+            </div>
+        </main>
     
-    <div class="info-box" >
-        <div id="result" class="result" style="display: none;">
-            <h2>BIENVENIDO</h2>
-            <p id="userName"></p>
-            <p id="userEmail"></p>
-            <div id="welcomemessage"></div>
-        </div>
-    </div>    
 </body>
 </html>
