--- a/vistas/login.html
+++ b/vistas/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login POKIMON</title>
     <script src="../js/index.js"></script>
+    <link rel="stylesheet" href="../css/fondo.css">
 </head>
 <body>
     <center>
