--- a/vistas/inicio.html
+++ b/vistas/inicio.html
@@ -9,12 +9,11 @@
     <script src="../js/inicio.js"></script>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>BIENVENIDO AL MUNDO POKIMON</h1>
-            <p>Bienvenido a mi primer juego en javascript</p>
-        </header>
-    </div>
+    <center>
+    <h1>BIENVENIDO AL MUNDO POKIMON</h1>
+        <p>Bienvenido a mi primer juego en javascript</p>
+        <hr>
+    </center>
         <main>
             <div class="info-box">
                 <div id="result" class="result">
