--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>POKIMON</title>
+        <title>POKIMON</title>  
         <link rel="stylesheet" href="../css/fondo.css">
+        <link rel="stylesheet" href="../css/inicio.css">
     </head>
     <body>
         <center>
