v21 acctualizacion entrenador pokemon

--- a/vistas/inicio.html
+++ b/vistas/inicio.html
@@ -6,6 +6,7 @@
     <title>Mundo POKIMON</title>
     <link rel="stylesheet" href="../css/fondo.css">
     <link rel="stylesheet" href="../css/inicio.css">
+    <link rel="stylesheet" href="../css/login.css">
     <script src="../js/inicio.js"></script>
 </head>
 <body>
@@ -33,6 +34,9 @@
                     ¡COMENZAR AVENTURA!
                     <img src="../img/pokeball-ico.webp" alt="Pokeball" class="button-icon">
                 </button>
+
+                <h1><a href="Entrenadores.html" class="register-link">QUIERES CONOCER A LOS ENTRENADORES?<span>Entrenadores</span></a></h1>x|
+                
             </div>
         </main>
     </div>
