--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>POKIMON</title>  
-        <link rel="stylesheet" href="../css/fondo.css">
-    </head>
-    <body>
-        <center>
-            <h1>BIENVENIDO AL MUNDO POKIMON</h1>
-            <p>Bienvenido a mi primer juego en javascript</p>
-        </center>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Diseño Web</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+</head>
+<body>
+    <div class="container">
+        
+        <nav>   
+            <img class="logo1" src="./img/pikachu.webp" alt="">         
+            <span class="logo">Pokimon</span>
+        </nav>
         <hr>
-        <br>
-        <br>
-        <br>
-        <center>
-            <div>
-                <table>
-                    <tr>
-                        <td style="text-align: center;">
-                            <a href="./vistas/login.html">Iniciar</a>
-                        </td>
-                    </tr>
-                    <td style="text-align: center;">
-                        <button>Opciones</button>
-                    </td>
-                </table>
-            </div>
-        </center>
-    </body>
+        <header>
+            <h1>BIENVENIDO</h1>            
+            <p> Explora nuestro mundo <br> y se el mejor de todos</p>
+            <button onclick="window.location.href='./vistas/login.html'" type="button" >
+                INICIA SESION
+                <img src="icono/bxs-right-arrow-alt.svg" alt="">
+            </button>
+        </header>
+        <!--<img class="emp" src="./assent/img/img1_principal.jpg" alt="">-->
+         <img class="fondo-emp" src="./img/ft1.png" alt="">
+    
+    </div>
+</body>
 </html>
