--- a/vistas/Entrenadores.html
+++ b/vistas/Entrenadores.html
@@ -16,7 +16,7 @@
          <meta charset="UTF-8">
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <title>Entrenador</title>
-         <script src="../js/Entrenador.js"></script>
+         <script src="../js/Entrenadores.js"></script>
      </head>
      <body>
         <div class="container">
@@ -67,11 +67,11 @@
             <fieldset>
                 <legend>OPCIONES</legend>
                 <div class="button-group">
-                    <button>
-                        <span>Combate</span>
+                    <button onclick="entrenadores()">
+                        <span>Entrenador</span>
                     </button>
-                    <button>
-                        <span>Ver Pokimons</span>
+                    <button  onclick="pokemons()">
+                        <span>Pokimon</span>
                     </button>
                 </div>
             </fieldset>
