--- a/vistas/pokimons.html
+++ b/vistas/pokimons.html
@@ -54,10 +54,11 @@
 
     <!-- Botones flotantes en la parte inferior -->
     <nav class="floating-nav">
-        <button class="nav-btn combat-btn">Combate</button>
-        <button class="nav-btn view-btn">Ver Pokémons</button>
+        <center></center>
+        <button onclick="window.location.href='../vistas/Entrenadores.html'" class="nav-btn combat-btn">Añadir </button>
+    </center>
+     
     </nav>
 
-    <script src="./js/open-pokemon-app.js"></script>
 </body>
 </html>
