--- a/vistas/añadir.html
+++ b/vistas/añadir.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Entrenadores</title>
      <script src="../js/Entrenador.js"></script>
-     <link rel="stylesheet" href="../css/Entrenadores.css">
+     <link rel="stylesheet" href="../css/añadir.css">
      <link rel="stylesheet" href="../css/fondo.css">
  </head>
  <body>
@@ -16,7 +16,7 @@
          <meta charset="UTF-8">
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <title>Entrenador</title>
-         <script src="../js/Entrenadores.js"></script>
+         <script src="../js/añadir.js"></script>
      </head>
      <body>
         <div class="container">
