--- a/vistas/pikachu.html
+++ b/vistas/pikachu.html
@@ -71,7 +71,7 @@
     <!-- Botones flotantes en la parte inferior -->
     <nav class="floating-nav">
         <center>
-        <button onclick="window.location.href='../vistas/añadir.html'" class="nav-btn combat-btn">Añadir </button>
+        <button onclick="window.location.href='../vistas/Batalla.html'" class="nav-btn combat-btn">Batalla </button>
         <button onclick="window.location.href='../vistas/pokimons.html'" class="nav-btn combat-btn">INICIO</button>
     </center>
      
